# kron

./: .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESCRIPTION.txt  PKGBUILD  README.md  SECURITY.md  cmake_uninstall.cmake.in
.github/workflows/: cmake-linux.yml  release.yml
completions/: _kls  kls.bash  kls.fish
docs/: LIST-ARCHITECTURE.md  RELEASE-SIGNING.md  kls.1
general-utilities/: TokenData.hpp  TokenGroupData.hpp
include/core-hpp/: executor.hpp  parsing.hpp  tokenization.hpp
include/error/: error_hanlder.hpp
include/option/: option-raw-metadata.hpp
include/special-option/: help-option.hpp
include/token/: group-token.hpp  token-raw-metadata.hpp
src/: kls-main.cpp  kron-main.cpp  main.cpp
src/command-register-information/: command-information.cpp
src/command-register-information/command-handler-include/command-hanlder-cpp/: copy.cpp  inspect.cpp  list.cpp
src/core-system/: executor.cpp  parsing.cpp  tokenization.cpp  validator.cpp
src/error-register-information/: error_hanlder.cpp
src/option-register-information/: option-information.cpp
src/option-register-information/special-option/: help-handler.cpp  help-hanldler.cpp  version-handler.cpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt  EXECUTOR_TEST.cpp  PARSING_TEST.cpp  SPEED_TEST_LIST.cpp  TOKENIZATION_TEST.cpp  VALIDATION_TEST.cpp
